# ziggy-pydust

./: .gitignore  README.md  build.zig  index.html  libbuffers.dylib  mem.zig  mkdocs.yml  pyconf.dummy.zig  pydust.build.zig  pyproject.toml  pytest.build.zig  renovate.json  test.build.zig  test.py  versions.json
.github/workflows/: ci.yml  publish.yml
0.10/: 404.html
0.10/getting_started/: index.html
0.10/guide/_4_testing/: index.html
0.10/guide/exceptions/: index.html
0.11/: index.html
0.11/guide/_5_memory/: index.html
0.11/guide/classes/: index.html
0.11/guide/exceptions/: index.html
0.12/: 404.html
0.12/getting_started/: index.html
0.12/guide/classes/: index.html
0.13/: 404.html  index.html
0.13/guide/: index.html
0.13/guide/_6_buffers/: index.html
0.13/guide/modules/: index.html
0.14/: 404.html
0.14/getting_started/: index.html
0.14/guide/classes/: index.html
0.15/guide/_4_testing/: index.html
0.15/guide/exceptions/: index.html
0.15/guide/gil/: index.html
0.16/guide/_6_buffers/: index.html
0.16/guide/exceptions/: index.html
0.16/guide/functions/: index.html
0.16/guide/gil/: index.html
0.17/getting_started/: index.html
0.17/guide/classes/: index.html
0.17/guide/modules/: index.html
0.18/guide/_6_buffers/: index.html
0.18/stylesheets/: extra.css
0.19/guide/_5_memory/: index.html
0.19/guide/classes/: index.html
0.2.10/: 404.html  index.html
0.2.10/getting_started/: index.html
0.2.10/guide/_1_modules/: index.html
0.2.10/guide/_3_classes/: index.html
0.2.10/guide/_4_testing/: index.html
0.2.10/guide/_5_memory/: index.html
0.2.11/guide/_2_functions/: index.html
0.2.13/: index.html
0.2.13/guide/_4_testing/: index.html
0.2.13/guide/exceptions/: index.html
0.20/: index.html
0.20/getting_started/: index.html
0.20/guide/: index.html
0.20/guide/_4_testing/: index.html
0.20/guide/_5_memory/: index.html
0.20/guide/exceptions/: index.html
0.20/guide/gil/: index.html
0.21/: index.html
0.21/guide/: index.html
0.21/guide/_4_testing/: index.html
0.21/guide/_5_memory/: index.html
0.21/guide/_6_buffers/: index.html
0.21/guide/exceptions/: index.html
0.21/guide/functions/: index.html
0.21/guide/gil/: index.html
0.21/guide/modules/: index.html
0.22/: 404.html  index.html
0.22/guide/: index.html
0.22/guide/_4_testing/: index.html
0.22/guide/_5_memory/: index.html
0.22/guide/_6_buffers/: index.html
0.22/guide/classes/: index.html
0.22/guide/exceptions/: index.html
0.22/guide/functions/: index.html
0.22/guide/modules/: index.html
0.23/: 404.html
0.23/getting_started/: index.html
0.23/guide/: index.html
0.23/guide/_4_testing/: index.html
0.23/guide/_5_memory/: index.html
0.23/guide/_6_buffers/: index.html
0.23/guide/classes/: index.html
0.23/guide/exceptions/: index.html
0.23/guide/functions/: index.html
0.23/guide/gil/: index.html
0.23/guide/modules/: index.html
0.3.0/: CNAME
0.3.2/guide/_5_memory/: index.html
0.3.3/guide/_3_classes/: index.html
0.4/: 404.html  index.html
0.4/getting_started/: index.html
0.4/guide/_5_memory/: index.html
0.4/guide/_6_buffers/: index.html
0.4/guide/exceptions/: index.html
0.5/: 404.html
0.5/getting_started/: index.html
0.5/guide/: index.html
0.5/guide/_3_classes/: index.html
0.5/guide/_6_buffers/: index.html
0.5/guide/exceptions/: index.html
0.6/: 404.html
0.6/getting_started/: index.html
0.6/guide/: index.html
0.6/guide/_4_testing/: index.html
0.6/guide/_5_memory/: index.html
0.6/guide/_6_buffers/: index.html
0.6/guide/classes/: index.html
0.6/guide/exceptions/: index.html
0.7/getting_started/: index.html
0.8/: 404.html  index.html
0.8/guide/: index.html
0.9/getting_started/: index.html
HEAD/: index.html
HEAD/getting_started/: index.html
HEAD/guide/: index.html
develop/: 404.html  index.html
develop/getting_started/: index.html
develop/guide/: index.html
docs/: .gitignore  getting_started.md  index.md
docs/guide/: _1_modules.md  _2_functions.md  _3_classes.md  _4_testing.md  _5_memory.md  _6_buffers.md  classes.md  exceptions.md  functions.md  gil.md  index.md  modules.md
example/: .gitignore  buffers.pyi  buffers.zig  classes.pyi  classes.zig  code.pyi  code.zig  exceptions.pyi  exceptions.zig  functions.pyi  functions.zig  gil.pyi  gil.zig  hello.pyi  hello.zig  iterators.pyi  iterators.zig  memory.pyi  memory.zig  modules.pyi  modules.zig  operators.pyi  operators.zig  pytest.zig  result_types.pyi  result_types.zig
guide/_3_classes/: index.html
latest/: 404.html  index.html
latest/getting_started/: index.html
latest/guide/: index.html
latest/zig/: index.html
pydust/: __init__.py  __main__.py  build.py  buildzig.py  config.py  generate_stubs.py  pytest_plugin.py  zigexe.py
pydust/src/: attributes.zig  builtins.zig  conversions.zig  discovery.zig  errors.zig  ffi.zig  functions.zig  mem.zig  modules.zig  pydust.build.zig  pydust.zig  pytypes.zig  trampoline.zig  types.zig  unlimited_api.zig
test/: conftest.py  test_buffers.py  test_classes.py  test_classes_constructor.py  test_code.py  test_exceptions.py  test_functions.py  test_gil.py  test_hello.py  test_iterator.py  test_memory.py  test_modules.py  test_operators.py  test_pytest.py  test_resulttypes.py  test_zigonly.py
(+1093 files in other folders)
