[tool.poetry]
name = "ziggy-pydust"
version = "0.1.0"
description = ""
authors = ["Nicholas Gates <nick@fulcrum.so>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "pydust" }]
include = ["src"]
exclude = ["example"]

[tool.poetry.dependencies]
python = "^3.11"
ziglang = "^0.11.0"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.286"
black = "^23.7.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.2.6"
mkdocs-include-markdown-plugin = { version = "^6.0.1", python = "<3.13" }
mkdocs-spellcheck = { extras = ["all"], version = "^1.0.1" }

[tool.poetry.scripts]
pydust = "pydust.__main__:main"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "UP", "I001", "I002"]
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Out test modules

[tool.pydust]
root = "example/"

[[tool.pydust.ext_module]]
name = "example.hello"
root = "example/hello.zig"

[[tool.pydust.ext_module]]
name = "example.memory"
root = "example/memory.zig"

[[tool.pydust.ext_module]]
name = "example.modules"
root = "example/modules.zig"

[[tool.pydust.ext_module]]
name = "example.result_types"
root = "example/result_types.zig"
